feat:add new images,links and styles

--- a/style.css
+++ b/style.css
@@ -2,12 +2,20 @@ body{
     display: flex;
     justify-content: center;
 }
-img{
+.header-photo_download{
     height: 150px;
     display: flex;
-    justify-content: end !important; 
 }
-ul,.personal-summary-text,.personal-education-text,.personal-workexperience-text{
+ul,.personal-summary-text,.personal-education-text,.personal-workexperience-text,.year-of-creation{
     font-size: 20px;
     font-family: serif;
+}
+.image-rsschool{
+    height: 50px;
+    display: flex;
+}
+
+.image-github{
+    height: 100px;
+    display: flex;
 }
