--- a/style.css
+++ b/style.css
@@ -67,8 +67,11 @@ h1 {
     font-size: 48px;
 }
 h2{
-    font-size: 25px;
+    font-size: 26px;
 
+}
+p,li{
+    font-size: 20px;
 }
 .hljs{
     padding: 1rem;
@@ -92,9 +95,6 @@ h2{
     border-radius: 5%;
 }
 
-ul,.personal-summary-text,.personal-education-text,.personal-workexperience-text,.year-of-creation{
-    font-size: 20px;
-}
 .date-app{
     font-size: 20px;
 }
@@ -114,7 +114,7 @@ a:hover {
    /* Всё, что ниже - это бургер меню */
 .menu{
     
-    width: 190px;
+    width: 230px;
     background-color: rgb(255, 255, 255);
     position: relative;
     color: rgb(0, 0, 0);
@@ -173,6 +173,7 @@ label{
     text-decoration: none;
     border-top: 2px solid rgba(0, 0, 0, 0.3);
     background-color: rgb(213,214,216);
+    font-size: 20px;
 }
 #check-menu:checked ~ .main-menu{
     max-height: 450px;
