--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ a{
     text-decoration: none;
     color: rgb(140, 140, 196);
 }
+.display-none{
+    display: none;
+}
 .content-left,
 .content-right{
     color: #333;
@@ -32,9 +35,7 @@ a{
     padding-left: 15px;
     float: left;
 }
-.content-left {
-    width: 25%;
-}
+
 .skill-item{
     display: flex;
 }
@@ -46,6 +47,12 @@ a{
     width:60%;
     margin: 0px 0px 15px 0px;
 }
+.skill-item-top{
+    margin-top: 15px;
+}
+.skill-item-bot{
+    margin-bottom: 15px;
+}
 .circle-container{
     width:40%;
     margin: 15px 0px 15px 0px;
@@ -54,7 +61,9 @@ a{
     width:40%;
     margin: 0px 0px 15px 0px;
 }
-
+.content-left {
+    width: 25%;
+}
 .content-right {
     width: 75%;
 }
