feat: add actual info for cv

--- a/style.css
+++ b/style.css
@@ -1,32 +1,38 @@
 html {
     scroll-behavior: smooth;
-    }
-body{
+}
+
+body {
     display: flex;
     justify-content: center;
     background-image: url(image/light-gray-background.jpg);
-    line-height: 1,5;
+    line-height: 1, 5;
     font-family: 'Open Sans', sans-serif;
 }
-header{
+
+header {
     display: flex;
     position: relative;
     justify-content: space-between;
 }
-footer{
-   
+
+footer {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
-a{
+
+a {
     text-decoration: none;
     color: rgb(140, 140, 196);
 }
-.display-none{
+
+.display-none {
     display: none;
 }
+
 .content-left,
-.content-right{
+.content-right {
     color: #333;
     box-sizing: border-box;
     position: relative;
@@ -36,61 +42,73 @@ a{
     float: left;
 }
 
-.skill-item{
+.skill-item {
     display: flex;
 }
-.skill-item-name{
-    width:60%;
-    margin: 15px 0px 15px 0px;
+
+.skill-item-name {
+    width: 60%;
 }
-.skill-item-name1{
-    width:60%;
-    margin: 0px 0px 15px 0px;
+
+.skill-item-name1 {
+    width: 60%;
 }
-.skill-item-top{
-    margin-top: 15px;
+
+.circle-container {
+    width: 40%;
 }
-.skill-item-bot{
-    margin-bottom: 15px;
+ul{
+    padding: 10px 0 10px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
-.circle-container{
-    width:40%;
-    margin: 15px 0px 15px 0px;
+.circle-container1 {
+    width: 40%;
 }
-.circle-container1{
-    width:40%;
-    margin: 0px 0px 15px 0px;
-}
+
 .content-left {
     width: 25%;
 }
+
 .content-right {
     width: 75%;
 }
-.cv-section{
+
+.cv-section {
     display: flex;
     border-top: 1px solid #E0E0E0;
 }
-header, main, footer{
+
+header,
+main,
+footer {
     background-color: white;
 }
+
 h1 {
     font-size: 48px;
 }
-h2{
+
+h2 {
     font-size: 30px;
 
 }
-h3{
+
+h3 {
     font-size: 26px;
 
 }
-p,li{
+
+p,
+li {
     font-size: 20px;
 }
-.hljs{
+
+.hljs {
     padding: 1rem;
 }
+
 .circle {
     height: 15px;
     width: 15px;
@@ -103,32 +121,35 @@ p,li{
 .circle.disable {
     background-color: #E0E0E0;
 }
-.header-photo_download{
+
+.header-photo_download {
     border: 2px solid #757575;
     border-radius: 10px;
     height: 300px;
     border-radius: 5%;
 }
 
-.date-app{
+.date-app {
     font-size: 20px;
 }
-.image-rsschool{
+
+.image-rsschool {
     height: 50px;
     display: flex;
 }
 
-.image-github{
+.image-github {
     height: 100px;
     display: flex;
 }
-a:hover {
-    color: #ff00f2; 
-   }
 
-   /* Всё, что ниже - это бургер меню */
-.menu{
-    
+a:hover {
+    color: #ff00f2;
+}
+
+/* Всё, что ниже - это бургер меню */
+.menu {
+
     width: 230px;
     background-color: rgb(255, 255, 255);
     position: relative;
@@ -138,12 +159,14 @@ a:hover {
     top: 0;
     right: 0;
 }
-#check-menu{
+
+#check-menu {
     display: none;
     width: 100%;
 
 }
-label{
+
+label {
     display: block;
     position: absolute;
     top: 0;
@@ -153,7 +176,8 @@ label{
     cursor: pointer;
     z-index: 2;
 }
-.burger-line{
+
+.burger-line {
     position: absolute;
     top: 8px;
     right: 10px;
@@ -161,14 +185,17 @@ label{
     height: 2px;
     background-color: rgb(0, 0, 0)
 }
-.second, .third{
+
+.second,
+.third {
     top: 18px;
 }
 
-.fourth{
+.fourth {
     top: 28px;
 }
-.main-menu{
+
+.main-menu {
     display: block;
     position: absolute;
     width: 100%;
@@ -180,29 +207,83 @@ label{
     overflow: hidden;
     transition: 0.3s all;
 }
-.menu-link{
+
+.menu-link {
     display: block;
     max-width: 100%;
     padding: 8px;
     color: rgb(0, 0, 0);
     text-decoration: none;
     border-top: 2px solid rgba(0, 0, 0, 0.3);
-    background-color: rgb(213,214,216);
+    background-color: rgb(213, 214, 216);
     font-size: 20px;
 }
-#check-menu:checked ~ .main-menu{
+
+#check-menu:checked~.main-menu {
     max-height: 450px;
     font-size: 16px;
 }
-#check-menu:checked ~ .first{
+
+#check-menu:checked~.first {
     display: none;
 }
-#check-menu:checked ~ .second{
+
+#check-menu:checked~.second {
     transform: rotate(45deg);
 }
-#check-menu:checked ~ .third{
+
+#check-menu:checked~.third {
     transform: rotate(-45deg);
 }
-#check-menu:checked ~ .fourth{
+
+#check-menu:checked~.fourth {
     display: none;
+}
+
+.projects-container {
+    display: flex;
+    padding-top: 20px;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 2em;
+    flex-wrap: wrap;
+}
+
+.christmas-task,
+.momentum,
+.project-management,
+.rslang {
+    background-size: 100% !important;
+    background-repeat: no-repeat !important;
+    width: 25em;
+    height: 205px;
+    transition: 1s;
+}
+
+.christmas-task {
+    background: url(https://user-images.githubusercontent.com/82538974/170081738-b3f3a15e-b4f8-4bfc-a97b-8569f3c030b7.png);
+}
+
+.christmas-task:hover,
+.momentum:hover,
+.project-management:hover,
+.rslang:hover {
+    transform: scale(1.1);
+    border-radius: 25px;
+}
+
+.momentum {
+    background: url(https://user-images.githubusercontent.com/82538974/170084765-36f35f33-9551-43b9-befc-afb2c18728f7.png);
+}
+
+.project-management {
+    background: url(https://user-images.githubusercontent.com/82538974/170089378-5778aa96-900f-4861-844f-aa4ab3a1c800.png);
+}
+
+.rslang {
+    background: url(https://user-images.githubusercontent.com/82538974/170090026-f3c0524a-6fb9-46f2-b916-c33b84338abb.png);
+}
+
+.projects-container.second{
+    padding-bottom: 20px;
 }
